# breathe_project

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  Makefile  PROJECT_SUMMARY.md  README.md  context.md  eda.md  main.py  pyproject.toml  requirements.txt
code/: openaq.py  params.py
docker/mlflow/: Dockerfile
docker/package/: Dockerfile
models/: best_model_trained.joblib
notebooks/: bq_gap_oct2025.ipynb  download_data.ipynb  eda.ipynb  eda2.ipynb  mlflow.db  mlflow.ipynb  model.ipynb  preprocess.ipynb
notebooks/catboost_info/: learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
src/: entrypoint_bootstrap.py  entrypoint_periodic.py  model.py  params.py  utils.py
src/flows/: bootstrap.py  periodic.py
src/ingestion/: openaq.py  openweather.py  utils.py
src/models/: baseline.py  evaluate.py  model_pipeline.py  registry.py  train.py
src/preprocess/: cleaning.py  features.py  pipeline.py  preproc_pipeline.py  preprocess.py
ui/: requirements.txt  streamlit.py
