

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "breathe-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-bigquery>=3.40.0",
    "google-cloud-storage>=3.9.0",
    "lightgbm>=4.6.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "mlflow>=2.18.0",
    "numpy>=2.4.2",
    "optuna>=4.7.0",
    "pandas>=2.0.0,<3.0.0",
    "prefect>=3.6.15",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.53.1",
    "tqdm>=4.67.2",
    "xgboost>=3.1.3",
]

[dependency-groups]
api = [
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
]
dev = [
    "black>=26.1.0",
    "jupyter>=1.1.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]
ui = [
    "streamlit>=1.9.0",
]
